k8s/network-policies/allow-web-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-backend
spec:
  podSelector:
    matchLabels:
      app: backend
policyTypes:
    -ingress:
ingress:
  -from:
      - podSelector:
        matchLabels:
          app: web

  ports:
      - protocol: TCP
        port: 5000
